# simple_gripper_gazebo

./: CMakeLists.txt  README.md  package.xml
config/: controller.yaml
urdf/: simple_gripper.xacro
