<?xml version="1.0"?>
<package format="2">
  <name>simple_gripper_gazebo</name>
  <version>0.0.1</version>
  <description>The simple_gripper_gazebo package</description>

  <maintainer email="k01.mkn@gmail.com">Kirill Artemov</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roboticsgroup_upatras_gazebo_plugins</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
    
  <export>

  </export>
</package>
